﻿drkns 25.11.2013 01:55:45 +0200 - build 3724

1. Пара уточнений 3723.

drkns 24.11.2013 21:37:36 +0200 - build 3723

1. Рефакторинг.

2. Удалён неиспользуемый код.

w17 21.11.2013 21:10:00 +0400 - build 3722

1. нажатия CtrlJ/C/F в панели, когда курсор стоит на .., вызывают исключения.

shmuel 21.11.2013 17:11:54 +0200 - build 3721

1. Уточнение билда 3708 (M#2440).

w17 20.11.2013 13:48:49 +0400 - build 3720

1. M#2527: Crash when restarting with rebuilding tree(fix b3673.2)

drkns 19.11.2013 21:18:07 +0200 - build 3719

1. 0002528: Падение при включении режима панели LCtrl8

﻿svs 18.11.2013 15:42:46 +0400 - build 3718

1. Уточнения по TREEFILE_PROJECT (Mantis#0000186)

w17 18.11.2013 11:37:28 +0400 - build 3717

1. Уточнение 3713 (не пишем дубликаты команд из разных каталогов)

shmuel 16.11.2013 17:17:31 +0200 - build 3716

1. Уточнение 3713.

shmuel 16.11.2013 16:55:01 +0200 - build 3715

1. Уточнение 3714.

shmuel 16.11.2013 14:54:12 +0200 - build 3714

1. Добавлен тип события в Panel API: FE_CHANGESORTPARAMS.

w17 16.11.2013 03:05:43 +0400 - build 3713

1. M#2208: Запоминать, в какой папке была запущена команда (from fml2)

svs 15.11.2013 17:39:24 +0400 - build 3712

1. Уточнения (немного) по TREEFILE_PROJECT (Mantis#0000186)
   про сетевые пути

svs 15.11.2013 15:35:21 +0400 - build 3711

1. Уточнения (немного) по TREEFILE_PROJECT (Mantis#0000186)
   Изменены шаблоны tree-файлов:
    "LD.%D.%SN.tree"      шаблон имени файла-деревяхи для локальных дисков
    "ND.%D.%SN.tree"      шаблон имени файла-деревяхи для сетевых дисков
    "NP.%SR.%SH.tree"     шаблон имени файла-деревяхи для сетевых путей
    "RD.%SN.tree"         шаблон имени файла-деревяхи для сменных дисков
    "CD.%L.%SN.tree"      шаблон имени файла-деревяхи для CD/DVD/BD/etc дисков

   <АХТУНГ>

   1. Не надо ставить /D TREEFILE_PROJECT - проект в разработке. Только для тестирования.
   2. Идеи и замечания сюда - http://bugs.farmanager.com/view.php?id=186

   </АХТУНГ>
