@@ -1,4 +1,8 @@
-﻿drkns 25.11.2013 01:55:45 +0200 - build 3724
+﻿drkns 26.11.2013 23:03:45 +0200 - build 3725
+
+1. Пара уточнений 3723.
+
+drkns 25.11.2013 01:55:45 +0200 - build 3724
 
 1. Пара уточнений 3723.
 
